@@ -64,7 +64,7 @@ public class CopyStatementPlanner {
     }
 
     public Plan planCopyFrom(CopyFromAnalyzedStatement analysis, Planner.Context context) {
-        /**
+        /*
          * copy from has two "modes":
          *
          * 1: non-partitioned tables or partitioned tables with partition ident --> import into single es index
@@ -115,16 +115,22 @@ public class CopyStatementPlanner {
             0 ? partitionedByNames.toArray(new String[partitionedByNames.size()]) : null,
             table.isPartitioned() // autoCreateIndices
         );
-        List<Projection> projections = Collections.<Projection>singletonList(sourceIndexWriterProjection);
-        partitionedByNames.removeAll(Lists.transform(table.primaryKey(), ColumnIdent::fqn));
-        int referencesSize = table.primaryKey().size() + partitionedByNames.size() + 1;
-        referencesSize = clusteredByPrimaryKeyIdx == -1 ? referencesSize + 1 : referencesSize;
+        List<Projection> projections = Collections.singletonList(sourceIndexWriterProjection);
 
-        List<Symbol> toCollect = new ArrayList<>(referencesSize);
+        List<ColumnIdent> primaryKeys = new ArrayList<>(table.primaryKey().size());
+        List<Symbol> toCollect = new ArrayList<>();
         // add primaryKey columns
         for (ColumnIdent primaryKey : table.primaryKey()) {
-            toCollect.add(table.getReference(primaryKey));
+            Reference reference = table.getReference(primaryKey);
+            if (reference instanceof GeneratedReference && table.partitionedByColumns().contains(reference)) {
+                // will track this reference in the partitioned by list (so we can extract its references and
+                // the function expression
+                continue;
+            }
+            toCollect.add(reference);
+            primaryKeys.add(primaryKey);
         }
+        partitionedByNames.removeAll(Lists.transform(primaryKeys, ColumnIdent::fqn));
 
         // add partitioned columns (if not part of primaryKey)
         Set<Reference> referencedReferences = new HashSet<>();
